# audiodecoder.asap

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
audiodecoder.asap/: addon.xml  addon.xml.in
audiodecoder.asap/resources/language/resource.language.ca_es/: strings.po
audiodecoder.asap/resources/language/resource.language.da_dk/: strings.po
audiodecoder.asap/resources/language/resource.language.de_de/: strings.po
audiodecoder.asap/resources/language/resource.language.en_gb/: strings.po
audiodecoder.asap/resources/language/resource.language.es_es/: strings.po
audiodecoder.asap/resources/language/resource.language.es_mx/: strings.po
audiodecoder.asap/resources/language/resource.language.et_ee/: strings.po
audiodecoder.asap/resources/language/resource.language.eu_es/: strings.po
audiodecoder.asap/resources/language/resource.language.fi_fi/: strings.po
audiodecoder.asap/resources/language/resource.language.fr_fr/: strings.po
audiodecoder.asap/resources/language/resource.language.hr_hr/: strings.po
audiodecoder.asap/resources/language/resource.language.it_it/: strings.po
audiodecoder.asap/resources/language/resource.language.ko_kr/: strings.po
audiodecoder.asap/resources/language/resource.language.pl_pl/: strings.po
audiodecoder.asap/resources/language/resource.language.ru_ru/: strings.po
audiodecoder.asap/resources/language/resource.language.sk_sk/: strings.po
debian/: changelog.in  control  copyright  rules
lib/: kodi-asap-code-note.txt
lib/asap-3.1.5/: MANIFEST  Makefile  README.html  asapconv
lib/asap-4.0.0/: MANIFEST
src/: ASAPCodec.c  ASAPCodec.cpp  ASAPCodec.h
(+2 files in other folders)
